Update VB6 grammar to handle parsing a form's control tree and add a new new parser unit tests project to test the new parsing rules.

--- a/VBTranspiler.CodeGenerator/VBTranspiler.CodeGenerator.csproj
+++ b/VBTranspiler.CodeGenerator/VBTranspiler.CodeGenerator.csproj
@@ -114,7 +114,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VBTranspiler.Transpiler\VBTranspiler.Parser.csproj">
+    <ProjectReference Include="..\VBTranspiler.Parser\VBTranspiler.Parser.csproj">
       <Project>{0ed27b86-7a52-4557-9a7a-3d7c1f735797}</Project>
       <Name>VBTranspiler.Parser</Name>
     </ProjectReference>
