Assorted VB6 parser bug fixes found by running it against real world code.

--- a/VBTranspiler.Parser/VBTranspiler.Parser.csproj
+++ b/VBTranspiler.Parser/VBTranspiler.Parser.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VIsualBasic6Parser.cs" />
+    <Compile Include="VisualBasic6Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
